ros_embedded/log/build_2023-06-03_13-10-41/web_server/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/pi/ros_embedded/install/web_server/lib/python3.10/site-packages/web_server/web_server.py", line 13
    print(resquests.get("http://%s/button/a/count" % server_ip)
         ^
SyntaxError: '(' was never closed

error: can't copy 'resource/web_server': doesn't exist or not a regular file
